# wae

./: .example.env  .gitignore  Makefile  README.md  goals.md  notes.md  requiremenents.txt  requirements.txt
cli/: Cargo.toml  README.md
cli/src/: bindings.rs  main.rs
cli/wit/: world.wit
crypto/: README.md  app_crypto.py  app_password.py  crypto.md  host.py  password.py
crypto/crypto/: __init__.py
crypto/crypto/exports/: __init__.py
crypto/password_guest/password/: __init__.py
crypto/wit/: world.wit
githubapi/: Cargo.toml  README.md  app.py  project.md
githubapi/githubapi_guest/project/: __init__.py
githubapi/project/exports/: __init__.py
githubapi/project/imports/: outgoing_http.py
githubapi/src/: bindings.rs  lib.rs
githubapi/wit/: deps.toml  world.wit
githubapiv2/: app.py
githubapiv2/githubapiv2_guest/project/imports/: outgoing_http.py
githubapiv2/project/exports/: __init__.py
githubapiv2/project/imports/: outgoing_http.py
githubapiv2/wit/: world.wit
httpclient/: http.md
httpclient/src/: bindings.rs  lib.rs
httpclient/wit/: world.wit
openai/: app.py  genai.md
openai/genai/: __init__.py
openai/genai/exports/: __init__.py
openai/genai/imports/: outgoing_http.py
openai/wit/: world.wit
testgo/: go.mod
testgo/wit/: world.wit
wasihttpclient/: Cargo.toml
wasihttpclient/src/: bindings.rs  lib.rs
wasihttpclient/wit/: world.wit
watttime/: app.py  green.md
watttime/green/: __init__.py
watttime/green/exports/: __init__.py  watttime.py
watttime/green/imports/: outgoing_http.py
watttime/wit/: world.wit
