[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }


[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "dipankardas011:cli"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"dipankardas011:crypto" = { path = "../crypto/wit" }
"dipankardas011:githubapi" = { path = "../githubapi/wit" }

[package.metadata.component.dependencies]
