[package]
name = "httpclient"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }
wasi = "0.13.1"
anyhow = "1.0.86"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "dipankardas011:httpclient"

[package.metadata.component.dependencies]
